# DeePC

./: .gitignore  Dockerfile  main.py  pyproject.toml  readme.md
mpc-unstable/: Lissajous-deepc400-64-1-ztTVm7R1mcDQ4IvEAyXoBwaa.npy  Lissajous-mpc-64-1-y4JRN5wJsfbvuXglpDrWsQaa.npy  Lissajous-pid-60-5-3Gx0Z6KBTgzWEz97pQp3vwaa.npy  Lissajous-pid-60-5-3Gx0Z6KBTgzWEz97pQp3vwaa_.npy
source/: deepc.py  deepc_tracking.py  graph.py  model.py  mpc_tracking.py  pid_tracking.py  track.py
test/: test_model.py  test_tracking.py
